# RVFM2

./: .gitignore  Cargo.toml  README.md  build_rust_tests.sh  clean_build_c_tests.sh  clean_build_rust_tests.sh  clean_build_tests.sh  clean_rust_tests.sh
rvfm/: Cargo.toml
rvfm/src/: config.rs  interrupt_controller.rs  main.rs  pointer_queue.rs
rvfm/src/debugger/: mod.rs
rvfm/src/gpu/: buffer.rs  command.rs  core.rs  fragment_shader.rs  mod.rs  pipeline_state.rs  rasterizer.rs  shader.rs  shader_parser.rs  texture.rs  types.rs  vertex_shader.rs
rvfm/src/hart/: csrs.rs  decoder.rs  mod.rs
rvfm/src/spu/: filter.rs  mod.rs  oscillator.rs
rvfm/src/ui/: main_window.rs
sdk/c/: Makefile
sdk/rust/: Cargo.toml
sdk/rust/rvfm_platform/: Cargo.toml  build.rs  link.ld
sdk/rust/rvfm_platform/.cargo/: config.toml
sdk/rust/rvfm_platform/src/: command_list.rs  debug.rs  hart.rs  input.rs  intrin.rs  lib.rs
sdk/rust/rvfm_platform/src/gpu/: command.rs  pipeline_state.rs
sdk/rust/rvfm_platform/src/multihart/: critical_section.rs  hart_local.rs  mod.rs  spinlock.rs  trampoline.s
sdk/rust/rvfm_platform/src/spu/: command.rs
shader_assembler/: Cargo.toml  test.shasm
shader_assembler/src/: assembler.rs  instructions.rs  lexer.rs  main.rs  src_error.rs
src/: command_list.rs  debug.rs  hart_clock.rs  input.rs  interrupt_controller.rs  machine.rs  main.rs  run.rs  run_debugger.rs  timer.rs
src/debugger/: command.rs  mod.rs
src/gpu/: command.rs  command_list.rs  core.rs  fragment_shader.rs  mod.rs  types.rs  (+6 more)
tests/: README.md
tests/alloc_sgfx/: Cargo.toml  Makefile  disassembly.txt
tests/alloc_sgfx/src/: init.s  main.rs
tests/hello_triangle/: Cargo.toml  Makefile  build.rs  disassembly.txt
tests/hello_triangle/.cargo/: config.toml
tests/hello_triangle/src/: main.rs  shader.shasm
(+123 files in other folders)
