[package]
name = "alloc_sgfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvfm_platform = { path = "../../sdk/rust/rvfm_platform", features = ["critical-section", "multihart", "spinlock"] }
glam = { version = "0.28", default-features = false, features = ["libm"] }
rvfm_sgfx = { path = "../../sdk/rust/rvfm_sgfx" }
talc = "4.4.1"
