[package]
name = "rvfm_platform"
version = "0.1.0"
edition = "2021"
links = "rvfm_platform"
build = "build.rs"

[dependencies]
bytemuck = "1.16"
critical-section = { version = "1.1", features = ["restore-state-bool"], optional = true }
lock_api = { version = "0.4.12", optional = true }

[features]
multihart = []
critical-section = ["dep:critical-section"]
spinlock = ["dep:lock_api"]

